name: StatisticsHS
version: 1.0.0.0
synopsis: Some statistics functions
license: MIT
license-file: LICENSE.txt
author: Braden Walters
maintainer: vc@braden-walters.info
category: Math
build-type: Simple
cabal-version: >=1.8

library
  exposed-modules: Meoblast001.Statistics
  build-depends: base ==4.6.*
  hs-source-dirs: src