name: statistics-hs
version: 0.1.0.0
synopsis: Some statistics functions
license: MIT
license-file: LICENSE.txt
author: Braden Walters
maintainer: vc@braden-walters.info
category: Math
build-type: Simple
cabal-version: >=1.8

library
  exposed-modules: Math.StatisticsHS
  build-depends: base >4 && <5
  hs-source-dirs: src
